# bulletproofs-r1cs-gadgets

./: .gitignore  Cargo.toml  Poseidon_Ristretto.ipynb  README.md
src/: factors.rs  gadget_bound_check.rs  gadget_mimc.rs  gadget_not_equals.rs  gadget_osmt.rs  gadget_poseidon.rs  gadget_range_proof.rs  gadget_set_membership.rs  gadget_set_membership_1.rs  gadget_set_non_membership.rs  gadget_sharkmimc.rs  gadget_vsmt.rs  gadget_vsmt_2.rs  gadget_vsmt_4.rs  gadget_zero_nonzero.rs  lib.rs  poseidon_constants.rs  r1cs_utils.rs  scalar_utils.rs
