[package]
name = "bulletproofs_examples"
version = "0.1.1"
authors = ["lovesh harchandani <lovesh.bond@gmail.com>"]
edition = "2018"

[dependencies]
curve25519-dalek = { version = "2", default-features = false, features = ["u64_backend", "nightly", "serde", "alloc"] }
subtle = { version = "2", default-features = false }
sha3 = { version = "0.8", default-features = false }
digest = { version = "0.8", default-features = false }
rand_core = { version = "0.5", default-features = false, features = ["alloc"] }
rand = { version = "0.7", default-features = false, features =["std"] }
byteorder = { version = "1", default-features = false }
serde = { version = "1", default-features = false, features = ["alloc"] }
serde_derive = { version = "1", default-features = false }
thiserror = { version = "1", optional = true }
merlin = { version = "2", default-features = false }
clear_on_drop = { version = "0.2", default-features = false, features = ["nightly"] }
failure = "0.1"

[dependencies.bulletproofs]
#path = "../bulletproofs"
git = "https://github.com/lovesh/bulletproofs"
branch = "smt"
features = ["std", "avx2_backend", "yoloproofs"]

[dev-dependencies]
hex = "0.3"
criterion = "0.3"
bincode = "1"
rand_chacha = "0.2"
spock = "0.1.0"
